Многое было сделано

--- a/src/app/order/[slug]/Order.module.scss
+++ b/src/app/order/[slug]/Order.module.scss
@@ -29,6 +29,16 @@
                 color: #678098;
             }
         }
+
+        .images{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 10px;
+            width: 100%;
+            justify-content: center;
+            margin-top: 10px;
+        }
     }
     
 
